Check RFID info (resolve #8)
